# NyLLM

./: .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md
.claude/: settings.json
.claude/agents/: blazor-ui-dev.md  design-docs-editor.md  legal-license-guard.md  poc-core-dev.md  project-leader.md  threat-model-reviewer.md
.github/: FUNDING.yml
docs/: AI_Concept.md  Architecture.md  PoC_Design_Notes.md  PoC_Minimal_Loop.md  PoC_Test_Results.md  Roadmap.md  S2.5_エントリ形式設計.md  S3_Company_Phase1_社内多ノード共有設計.md  S4_Company_Phase1_層1内在信頼度先行設計.md  S4_Public_Phase2_層2層3評判機構先行設計.md  S5_Public_Phase2_法的機構先行設計.md  Winny_Type_Semantic_Cache_AI_Concept.md  Winny_Type_Semantic_Cache_Architecture.md  Winny_Type_Semantic_Cache_信頼性設計メモ.md  信頼性設計メモ.md  設計レビュー_2026-07.md
docs/superpowers/specs/: 2026-07-18-selectable-inference-backend-design.md  2026-07-19-openai-compat-endpoint-design.md  2026-07-20-positioning-rework-design.md  2026-07-20-s5-source-side-revocation-filter-design.md  2026-07-20-sharing-killswitch-and-legal-posture-design.md
poc/: Cargo.toml  README.md  meson.build  meson_options.txt
poc/python_prototype/: agents.py  demo.py  embedder.py  requirements.txt  semantic_cache.py  volatility.py
poc/src/: agent.hpp  agent.rs  cache.hpp  cache.rs  embedder.hpp  embedder.rs  main.cpp  main.rs  onnx_embedder.hpp  onnx_embedder.rs  pipeline.rs  signer.hpp  signer.rs  triples.rs  volatility.hpp  volatility.rs
poc/src/signer/: ed25519_signer.rs
poc/src/tests/: bench_cache.rs  bench_pipeline.rs  common.rs  test_cache.rs  test_cache_facts.rs  test_finalize_volatility.rs  test_pipeline.rs  test_signer.rs  test_triples.rs  test_volatility.rs
src/core/: Cargo.toml  agent.rs  cache.rs  daemon.rs  embedder.rs  entry.rs  lib.rs  main.rs  node.rs  pipeline.rs  policy.rs  registry_client.rs  signer.rs  sync.rs  transport.rs  triples.rs  trust.rs  volatility.rs  wire.rs
src/core/agent/: ollama_agent.rs
src/core/embedder/: onnx_embedder.rs
src/registry/: Cargo.toml  lib.rs  main.rs
src/tests/: bench_lookup.rs  bench_source_side.rs  common.rs  test_agent.rs  test_ca_pinning.rs  test_cache_ingest.rs  test_daemon_http.rs  test_monotonic_shareable.rs  test_node.rs  test_policy_hooks.rs  test_registry_integration.rs  test_revocation.rs  test_shared_threshold.rs  test_sharing_killswitch.rs  test_sync.rs  test_trust.rs  test_wire.rs
