[package]
name = "semantic_cache_poc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "semantic_cache_poc"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# S2.5 エントリ形式(docs/S2.5_エントリ形式設計.md):
#   base64: .entry エンベロープ内の core_b64(正準バイト列の不透明ブロブ)用。MIT/Apache-2.0
#   unicode-normalization: lp_str の NFC 正規化(§3)用。MIT/Apache-2.0
base64 = "0.22"
unicode-normalization = "0.1"
ed25519-dalek = { version = "2", optional = true, features = ["rand_core"] }

[features]
default = []
# 実Ed25519署名(ed25519-dalek)。既定はDummySigner(依存ゼロのMACプレースホルダ)。
ed25519 = ["dep:ed25519-dalek"]
# 実Embedding経路の拡張点(骨格のみ、未配線)。既定はMockEmbedder。
onnx = []
